--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
 
 <head>
   <meta charset="UTF-8">
@@ -16,14 +15,12 @@
       <h1>
         <a href="/">Grocery List!!!</a>
       </h1>
-      <nav>
-        <!-- Conditionally render login or logout links -->
-        {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
+       <nav>
+        {{!-- let nav bar have a "login to  save button" --}}
+        <ul>
+          <li></li>
+        </ul>
+
       </nav>
     </header>
     <main class="container container-fluid mt-5">
@@ -41,16 +38,4 @@
   {{/if}}
 </body>
 
-=======
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>{{{body}}}</h1>
-    
-</body>
->>>>>>> 8886317a05c4f10ffd727dc4110e04c761eacca7
 </html>
