--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,7 +8,7 @@
     <div>
         <label for="password-login">password:</label>
         <input class="form-input" type="password" id="password-login"/>
-    </div>
+    </div>s
     <div>
         <button class="login-button" type="submit">login</button>
     </div>
