--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,17 +13,9 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-        <a href="/">Grocery List!!!</a>
+        Grocery List!!!
       </h1>
-       <nav>
-        {{!-- let nav bar have a "login to  save button" --}}
-        <ul>
-            {{!-- link this to the login handlebars!!! --}}
-          <li>
-              <a href='/views/'>Login to Save Your List!</a>
-          </li>
-        </ul>
-      </nav>
+    
     </header>
     
     {{!--  should make the info go in the center --}}
