--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -22,18 +22,18 @@
     <form class="form register-form">
       <div class="form-group">
         <label for="register-form">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
+        <input class="form-input" type="text" id="name-register" />
       </div>
       <div class="form-group">
         <label for="email-register">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <input class="form-input" type="text" id="email-register" />
       </div>
       <div class="form-group">
         <label for="password-register">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <input class="form-input" type="password" id="password-register" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <button class="btn btn-primary" type="submit">register</button>
       </div>
     </form>
   </div>
