added link references to handlebars

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,8 +9,8 @@
                     <ul class="nav nav-pills list-nav">
                          <!-- Make login and save links here-->
                         <!-- <li role="presentation" class="nav-item all-task active"><a href="#" class="nav-link">All Lists</a></li> -->
-                        <li role="presentation" class="nav-item login"><a href="#" class="nav-link">Login</a></li>
-                        <li role="presentation" class="nav-item save-list"><a href="#" class="nav-link">Save & Logout</a></li>
+                        <li role="presentation" class="nav-item login"><a href="/views/login.handlebars" class="nav-link">Login</a></li>
+                        <li role="presentation" class="nav-item save-list"><a href="/views/homepage.handlebars" class="nav-link">Save & Logout</a></li>
                     </ul>
                     <!-- container for the list -->
                     
