--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button class="btn btn-primary" type="submit" id="login-btn">login</button>
       </div>
     </form>
   </div>
@@ -33,7 +33,7 @@
         <input class="form-input" type="password" id="password-register" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">register</button>
+        <button class="btn btn-primary" type="submit" id="register-btn">register</button>
       </div>
     </form>
   </div>
