--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,8 +20,9 @@
     
     {{!--  should make the info go in the center --}}
     <div class='container'>
-      <!-- Render the sub layout -->
-      {{{ body }}}
+      <div class="row">
+        <div class="col-12">{{{ body }}}</div>
+      </div>
     </div>
     <footer>
       
