--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,8 @@
 body{
     margin-top:20px;
-    background-image: url("proj_2_background.jpg");
-    background-color: green;
+    background-image: url("../Assets/proj_2_background.jpg");
+    background-size: cover;
+   
 }
 
 .list-nav {
