--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="bg-success p-2 text-dark bg-opacity-25">
+  <div class=" p-2 text-light bg-opacity-25">
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1 class="text-center">Drop It Like It's Shop!</h1>
