--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,6 +102,6 @@ div.button, div.checker, div.radio, div.selector, div.uploader {
     box-shadow: 0 1px 15px rgba(0,0,0,0.04), 0 1px 6px rgba(0,0,0,0.04);
 }
 
-.grocery-items {
+/* .grocery-items {
     list-style-type: none;
-}
+} */
